--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -45,6 +45,10 @@ body {
   cursor: pointer !important;
 }
 
+.visible-count {
+  visibility: hidden;
+}
+
 .backgr-blue {
   background-color: rgb(33, 147, 243) !important;
 }
