--- a/src/styles/devextreme.scss
+++ b/src/styles/devextreme.scss
@@ -154,6 +154,11 @@
   border-top: none;
 }
 
+.dx-datagrid-table .dx-row .dx-command-select {
+  min-width: 20px !important;
+  width: 20px !important;
+}
+
 .dx-datagrid-headers .dx-datagrid-table .dx-row>td {
 
   font-size: 16px;
@@ -200,6 +205,76 @@
   padding-left: 16px;
 }
 
+
+//region Grid
+.dx-datagrid {
+  border-radius: 0 0 8px 8px;
+  color: $color-text;
+  font-family: "GoogleSans-Light", sans-serif;
+  font-size: 15px;
+  overflow: hidden;
+}
+
+.dx-datagrid-headers {
+  font-size: 16px;
+  color: $color-text;
+  font-family: "GoogleSans-Bold", sans-serif;
+  background-color: $color-grid-bg;
+}
+
+.ms-modal__member {
+  .dx-datagrid-headers {
+    font-size: 15px;
+    background-color: transparent;
+  }
+}
+
+.dx-datagrid-content .dx-datagrid-table.dx-datagrid-table-fixed {
+  height: 42px;
+}
+
+.dx-datagrid-content .dx-datagrid-table .dx-row > td,
+.dx-datagrid-content .dx-datagrid-table .dx-row > tr > td {
+  height: 44px;
+  padding: 12px 16px 0;
+  box-sizing: border-box;
+}
+
+.dx-datagrid-content .dx-datagrid-table .dx-row > td:first-child,
+.dx-datagrid-content .dx-datagrid-table .dx-row > tr > td:first-child {
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+.dx-datagrid-headers .dx-datagrid-table .dx-row > td,
+.dx-datagrid .dx-row-lines > td {
+  border-bottom: 1px solid $color-grey;
+}
+
+.dx-datagrid .dx-column-lines > td {
+  border-right: 0.5px solid $color-grey;
+}
+
+.dx-row.dx-data-row.dx-row-lines.dx-column-lines.dx-state-hover,
+.dx-row.dx-data-row.dx-state-hover {
+  @include table-row-shadow;
+  background-color: $color-blue-light;
+  cursor: pointer;
+}
+
+  .dx-datagrid-rowsview.dx-datagrid-nowrap.dx-command-select {
+  width: 40px !important;
+  min-width: 40px !important;
+  border: none;
+}
+
+.ms-modal__member .dx-checkbox-container .dx-checkbox-icon {
+  height: 16px !important;
+  width: 16px !important;
+  margin-right: 10px!important;
+  border: 1px solid #9e9e9e !important;
+}
+//endregion
 
 //region Button
 .dx-button-has-text .dx-button-content {
@@ -251,8 +326,6 @@
 //endregion
 
 //popover region
-
-
 
 .dx-popover-arrow {
   display: none;
